--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>React Component Demo</title>
+	<style>
+		#demo {
+			width: 300px;
+		}
+	</style>
 </head>
 <body>
 	<div id="demo"></div>
